<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_proposal_creation"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jzheadley.reachout.ui.ProposalCreationActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <ImageView
            android:background="@drawable/image_placeholder"
            android:id="@+id/add_photo"
            android:layout_height="200dp"
            android:layout_width="match_parent"
            android:onClick="onImageClick"
            android:scaleType="fitCenter" />

        <com.jzheadley.reachout.views.ThreeButtonView
            android:id="@+id/three_button_loan_amount"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="number"
            />

        <com.jzheadley.reachout.views.ThreeButtonView
            android:id="@+id/three_button_repayment_amount"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="number"/>

        <com.jzheadley.reachout.views.ThreeButtonView
            android:id="@+id/three_button_loan_length"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="number"
            />

        <com.jzheadley.reachout.views.ThreeButtonView
            android:id="@+id/three_button_money_making"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <com.jzheadley.reachout.views.ThreeButtonView
            android:id="@+id/three_button_loan_purchase"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <com.jzheadley.reachout.views.ThreeButtonView
            android:id="@+id/three_button_how_money_help"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <Button
            android:drawableLeft="@drawable/ic_thumb_up"
            android:id="@+id/btn_proposal_submit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:text="@string/submit_proposal" />
    </LinearLayout>
</ScrollView>
