<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="100dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">


    <Button
        android:id="@+id/test1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/invest_btn"
        android:onClick="onClick"
        android:text="borrower" />
    <Button
        android:id="@+id/test2"
        android:layout_marginTop="25dp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/invest_btn"
        android:onClick="onClick"
        android:text="Leader" />

    <Button
        android:id = "@+id/test3"
        android:textColor="#FFFFFF"
        android:layout_marginTop="25dp"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/invest_btn"
        android:onClick="onClick"
        android:text="Investor"/>
</LinearLayout>