<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:id="@+id/activity_pattern_login"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jzheadley.reachout.ui.PatternLoginActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/please_enter_your_password" />

    <include layout="@layout/pattern_lock_view" />

    <Button
        android:drawableLeft="@drawable/ic_thumb_up"
        android:id="@+id/login_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Submit" />
</LinearLayout>
